--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
+    "dompurify": "^3.1.7",
     "express": "^4.21.0",
     "express-rate-limit": "^7.4.1",
     "express-validator": "^7.2.0",
+    "jsdom": "^25.0.1",
     "jsonwebtoken": "^9.0.2"
   }
 }
