--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "node --env-file=.env --watch index.js",
-    "seed": "node seed/seedDB.js"
+    "seed": "node seed/seedDB.js",
+    "migrate": "prisma migrate deploy"
   },
   "keywords": [],
   "author": "",
