--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "node --env-file=.env --watch index.js",
     "seed": "node seed/seedDB.js",
-    "start": "node app.js",
+    "start": "node index.js",
     "migrate": "prisma migrate deploy"
   },
   "keywords": [],
